@@ -2,7 +2,7 @@
 """cluster: provides tools for clustering
 """
 
-__all__ = ['metric_scaling', 'UPGMA', 'nmds']
+__all__ = ['metric_scaling', 'procrustes', 'UPGMA', 'nmds']
 
 __author__ = ""
 __copyright__ = "Copyright 2007-2009, The Cogent Project"
